#
# Makefile.am for core/libyui/doc/examples/screenshots
#

screenshotsdir = 	$(docdir)/libyui/examples/screenshots

SUBDIRS = 		resized-larger resized-smaller

screenshots_DATA =				\
	BarGraph1.png				\
	BarGraph2.png				\
	BarGraph3.png				\
	ColoredLabel1.png			\
	ColoredLabel2.png			\
	ColoredLabel3.png			\
	ColoredLabel4.png			\
	DownloadProgress1.png			\
	Glyphs-ncurses.png			\
	Glyphs.png				\
	IntField1.png				\
	IntField2.png				\
	Image-local.png				\
	Image-scaled.png			\
	Image-tiled.png				\
	Image1.png				\
	Layout-Buttons-Equal-Even-Spaced1.png	\
	Layout-Buttons-Equal-Even-Spaced2.png	\
	Layout-Buttons-Equal-Growing.png	\
	Layout-Fixed.png			\
	Layout-Mixed.png			\
	Layout-Stretchable.png			\
	Layout-Weights1.png			\
	Layout-Weights2.png			\
	LogView1.png				\
	MultiLineEdit1.png			\
	MultiLineEdit2.png			\
	MultiLineEdit3.png			\
	MultiSelectionBox2.png			\
	PartitionSplitter1.png			\
	PartitionSplitter2.png			\
	Slider1.png				\
	Slider2.png				\
	Table1.png				\
	Table2.png				\
	Table3.png				\
	Table4.png				\
	Table5.png				\
	TextEntry1.png				\
	TextEntry2.png				\
	TextEntry3.png				\
	TextEntry4.png				\
	TextEntry5.png				\
	win_resizer.png

EXTRA_DIST = $(screenshots_DATA)

