#
# Makefile.am for core/libyui/doc/examples/screenshots/resized-smaller
#

screenshotsdir = 	$(docdir)/libyui/examples/screenshots/resized-smaller

screenshots_DATA =				\
	Layout-Buttons-Equal-Even-Spaced1.png	\
	Layout-Buttons-Equal-Even-Spaced2.png	\
	Layout-Buttons-Equal-Growing.png	\
	Layout-Fixed.png			\
	Layout-Mixed.png			\
	Layout-Stretchable.png			\
	Layout-Weights2.png

EXTRA_DIST = $(screenshots_DATA)

